	* Marked typo3/alt_main.php as deprecated
	* Fixed bug #8060: preview in clickmenu of list-module on tt_content records broken
	* Added new icons for content elements in t3skin
	* Added new icons in t3skin to select image orientation in Text w/Image content elements
	* Replaced icon for Web->Functions in t3skin

2008-04-15  Benjamin Mack  <benni@typo3.org>

	* HCI: Small Changes for t3skin icons "upload.gif" and "pages_up.gif"

2008-04-15  Ingo Renner  <ingo@typo3.org>

	* Follow up to #7986: removed borders from list view when not in extended view, credits Steffen Kamper
	* Follow up to #7986: icons were breaking into a new line in IE6
	* Follow up to #7986: in some cases columns were not aligned, credits Steffen Kamper
	* Fixed bug #7900: Docheader scrollbar isn't at right side, credits Steffen Kamper

2008-04-14  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7986: Vertical aligned Icons in List-Module, credits Peter Niederlag, Steffen Kamper, sponsored by snowflake productions
	* Added new icons in t3skin for the help menu entries in the module menu

2008-04-14  Benjamin Mack  <benni@typo3.org>

	* Pre-code cleanup for #6670 (Tabs in Page Properties III)

2008-04-13  Michael Stucki  <michael@typo3.org>

	* Minor code cleanup (patch by Benni Mack)
	* Add CSH information for fe_login_mode (by Benni Mack)

2008-04-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8064: Split does not work with returnKey = 0 (thanks to Dirk Weise)

2008-04-11  Oliver Hader  <oliver@typo3.org>

	* Renamed interface.t3lib_tceformsInlineHook.php to lowercase letters

2008-04-11  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #7897: Storage and display of datetime/time fields was broken (one hour shift) on DST (daylight saving time) changes

2008-04-11  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8078: enhance debug stack trace reporting

2008-04-10  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8035: 123-Installer shows error in step 1 when no DB connection was set up yet.