@@ -10,6 +10,7 @@
 	* Added new icons for content elements in t3skin
 	* Added new icons in t3skin to select image orientation in Text w/Image content elements
 	* Replaced icon for Web->Functions in t3skin
+	* Fixed bug #8108: Extension configuration options are not always shown, credits Jeff Segars
 
 2008-04-15  Benjamin Mack  <benni@typo3.org>
 
